--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@
 03-vpn/.terraform.*
 04-ec2/.terraform/*
 04-ec2/.terraform.*
+/ec2/.terraform
+ec2/.terraform.lock.hcl
+ec2/terraform.tfstate
+ec2/terraform.tfstate.backup
+roboshop-ec2/.terraform.lock.hcl
+roboshop-ec2/.terraform/modules/modules.json
+roboshop-ec2/.terraform/providers/registry.terraform.io/hashicorp/aws/5.31.0/windows_amd64/terraform-provider-aws_v5.31.0_x5.exe
+roboshop-ec2/terraform.tfstate
+roboshop-ec2/terraform.tfstate.backup
